<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="echo">echo</string>
    <string name="app_name">Echo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">username</string>
    <string name="echoLogo">Echo Logo</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="passwordVerify">Verify password</string>
    <string name="title_activity_scan">Scan Conversation QR code</string>
    <string name="scan">Scan</string>
    <string name="register">Register</string>
    <string name="action_search">Search</string>
    <string name="action_scan">Scan</string>
    <string name="title_activity_conversation_detail">ConversationDetailActivity</string>
    <string name="join">Join</string>
    <string name="inputMessage">Write a message</string>
    <string name="convTitleInput">Title</string>
    <string name="convTagsInput">Tags</string>
    <string name="addConversation">Add conversation</string>
    <string name="search_hint">Search conversations ...</string>
    <string name="user_settings">User Profile</string>
    <string name="update">Update</string>
    <string name="seeUsers">Attendees</string>

</resources>
