<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:fillViewport="true">

	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context=".MainActivity"
	    android:background="@color/background" >
	
	    <ImageView
	        android:id="@+id/logoLogin"
	        android:visibility="invisible"
	        android:contentDescription="@string/echoLogo"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="20dp"
	        android:src="@drawable/logo" />
	
	    <EditText
	        android:id="@+id/usernameLogin"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentRight="true"
	        android:layout_below="@+id/logoLogin"
	        android:layout_marginTop="20dp"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:ems="10"
	        android:hint="@string/username"
	        android:imeOptions="actionNext"
	        android:singleLine="true"
	        android:textColor="@color/textInputColor" >

	    </EditText>
	
	    <EditText
	        android:id="@+id/passwordLogin"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/usernameLogin"
	        android:layout_alignRight="@+id/usernameLogin"
	        android:layout_below="@+id/usernameLogin"
	        android:ems="10"
	        android:hint="@string/password"
	        android:imeOptions="actionDone"
	        android:inputType="textPassword"
	        android:singleLine="true"
	        android:textColor="@color/textInputColor" />
	
	    <Button
	        android:id="@+id/buttonLogin"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/passwordLogin"
	        android:layout_alignRight="@+id/passwordLogin"
	        android:layout_below="@+id/passwordLogin"
	        android:text="@string/login"
	        android:textColor="@color/white"
	        android:background="@color/buttonBackground"
	        android:onClick="loginUser" />
	
	    <ProgressBar
	        android:id="@+id/progressLogin"
	        style="?android:attr/progressBarStyleHorizontal"
	        android:indeterminateOnly="true"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/passwordLogin"
	        android:layout_alignRight="@+id/passwordLogin"
	        android:layout_below="@+id/passwordLogin"
	        android:visibility="gone" />

	    <TextView
	        android:id="@+id/titleLogin"
	        android:textStyle="bold"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_above="@+id/usernameLogin"
	        android:layout_centerHorizontal="true"
	        android:text="@string/echo"
	        android:textColor="@color/midBlue"
	        android:textSize="100sp" />
	
</RelativeLayout>
</ScrollView>