<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:background="@color/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Conversation Title"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textColor="@color/buttonBackground"
        android:typeface="sans"
        android:textAllCaps="true"
        android:id="@+id/textView0"
        android:layout_alignParentLeft="true"/>
    <View
        android:id="@+id/line1"
        android:layout_width="fill_parent"
        android:layout_height="1dip"

        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:background="@color/midBlue"
        android:layout_below="@+id/textView0"/>

    <EditText
        android:id="@+id/convTitle"
        android:hint="@string/convTitleInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:layout_below="@id/line1"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:imeOptions="actionNext"
	    android:singleLine="true"
         >

        <requestFocus />
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Conversation Tags"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textColor="@color/buttonBackground"
        android:typeface="sans"
        android:layout_below="@id/convTitle"
        android:textAllCaps="true"
        android:id="@+id/textView1"
        android:layout_alignParentLeft="true"/>
    <View
        android:id="@+id/line2"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:background="@color/midBlue"
        android:layout_below="@+id/textView1"/>

	<EditText
	    android:id="@+id/convTags"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentRight="true"
	    android:layout_below="@+id/line2"
	    android:ems="10"
	    android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:singleLine="true"
	    android:imeOptions="actionDone"
	    android:hint="@string/convTagsInput" />

	<Button
	    android:id="@+id/addButton"
	    android:background="@color/buttonBackground"
	    android:textColor="@color/white"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/convTags"
	    android:layout_alignRight="@+id/convTags"
	    android:layout_below="@+id/convTags"
	    android:layout_margin="5dp"
	    android:text="@string/addConversation" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/addProgress"
        android:indeterminate="true"
        android:layout_below="@+id/convTags"
        android:layout_alignLeft="@+id/convTags"
        android:layout_alignRight="@id/convTags" />

</RelativeLayout>
