<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity"
        android:background="@color/background" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name"
            android:textColor="@color/buttonBackground"
            android:typeface="sans"
            android:textAllCaps="true"
            android:id="@+id/textView0"
            android:layout_alignParentLeft="true"/>
        <View
            android:id="@+id/line1"
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@color/midBlue"
            android:layout_below="@+id/textView0"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/firstName"
            android:hint="First name"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:layout_below="@+id/line1"
            android:layout_alignParentLeft="true"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lastName"
            android:hint="Last name"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/firstName"
            android:layout_toRightOf="@+id/firstName" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/buttonBackground"
            android:text="Username"
            android:textAllCaps="true"
            android:layout_marginTop="15dp"
            android:typeface="sans"
            android:id="@+id/textView"
            android:layout_below="@+id/firstName"
            android:layout_alignParentLeft="true"/>
        <View
            android:id="@+id/line2"
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@color/midBlue"
            android:layout_below="@+id/textView"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/usernameInput"
            android:hint="@string/username"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:layout_below="@+id/line2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Password"
            android:textColor="@color/buttonBackground"
            android:textAllCaps="true"
            android:typeface="sans"
            android:id="@+id/textView1"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/usernameInput" />

        <View
            android:id="@+id/line3"
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@color/midBlue"
            android:layout_below="@+id/textView1"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:id="@+id/passwordInput1"
            android:hint="@string/password"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/line3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordInput2"
            android:layout_marginTop="2dp"
            android:singleLine="true"
            android:layout_below="@+id/passwordInput1"
            android:layout_alignParentLeft="true"
            android:hint="@string/passwordVerify"
            android:imeOptions="actionDone"
            android:layout_alignRight="@+id/passwordInput1" />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/passwordInput2"
            android:text="@string/register"
            android:textColor="@color/white"
            android:background="@color/buttonBackground"
            android:onClick="registerUser" />



        <ProgressBar
            android:id="@+id/progressLogin"
            style="?android:attr/progressBarStyleHorizontal"
            android:indeterminateOnly="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/buttonRegister"
            android:layout_alignRight="@+id/buttonRegister"
            android:layout_below="@+id/buttonRegister"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textStyle="italic"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Already have an account?"
            android:clickable="true"
            android:onClick="loginScreen"
            android:id="@+id/loginScreen"
            android:textColor="@color/buttonBackground"
            android:layout_below="@+id/buttonRegister"
            android:layout_centerHorizontal="true"/>


    </RelativeLayout>
</ScrollView>